--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -229,17 +229,6 @@ In practice that most people out there make use of RDFS and OWL constructs to te
 be created.Whether this is good or bad is another question, but that’s the
 reality.
 
-
-
-could be interpreted either with the open world assumption to support open
-world reasoning, and (exactly the same piece) interpreted in closed world
-applications as a constraint for interfaces or a validation rule
-
-Although, most people don’t care about open world semantics, 
-ambiguousness is one of the main reasons why OWL has not been adopted as standard DSCL for RDF validation in the past. 
-When OWL would be used assuming both OWA (for reasoning) and CWA (for constraint validation),
-it would be somewhat confusing to have two completely different semantics for OWL.
-
 The standard semantics of OWL is:
 
 \begin{itemize}
@@ -252,15 +241,20 @@ where usually the knowledge about the domain comes from distributed
 sources and a complete knowledge about the domain cannot be assumed, 
 but makes it difficult to use OWL for RDF validation.
 
+Although, most people don’t care about open world semantics, 
+ambiguousness is one of the main reasons why OWL has not been adopted as standard DSCL for RDF validation in the past. 
+When OWL would be used assuming both OWA (for reasoning) and CWA (for constraint validation),
+it would be somewhat confusing to have two completely different semantics for OWL.
+On the other hand, OWL constraints could be interpreted either with the OWA to support open
+world reasoning, and exactly the same piece can also be interpreted in closed world
+applications as a constraint. 
+
 You can't easily use OWL to even do cardinality checking. 
 For example, suppose you assert that \ms{hasFather} is a functional property, and you have the triples \ms{Luke hasFather Anakin} and \ms{Luke hasFather Darth}.
 An OWL reasoner will invoke the nUNA to infer that \ms{Anakin owl:sameAs Darth}.
 
-Therefore, the semantics for RDF validation is Closed World Assumption and the Unique Name Assumption.
+Therefore, the semantics for RDF validation is Closed World Assumption (CWA) and the Unique Name Assumption.
  
-
-
-
 As for an area where OWA is problematic, one need look no further than
 FRBRer ontology is clearly designed using OWL constraints
 (which I prefer to call "axioms" to avoid confusion) in a closed world
@@ -269,34 +263,32 @@ other, such that, using reasoning in the OWL, any FRBRer data will be
 inconsistent with data not using that exact set of axioms. 
 http://svn.aksw.org/papers/2014/WWW\_Databugger/public.pdf
 
-
-
-
+I would explain the addressed problem by an example, like the following:\\
+consider the KB $\mathcal{K} = \{Person \sqsubseteq \exists hasAncestor.Person, Person(\textbf{Thomas})\}$, using the OWA we know that \textbf{Thomas} has some Ancestor, but we do not know them, so $\mathcal{K}$ is consistent. In CWA the constraint needs to be satisfied only by named individuals, so there are some validation errors.\\
+A more complex example could be: \\
+Assume $\mathcal{K} = \{Person \sqsubseteq \exists hasAncestor.Person, (\textsf{funct } hasAncestor), Person(\textbf{Thomas}), hasAncestor(\textbf{Thomas}, \textbf{Erman}), hasAncestor(\textbf{Thomas}, \textbf{Andy})\}$, in CWA there is a clash because of the functional role \textit{hasAncestor} and the UNA, but in OWA there is no UNA by default so the reasoner will produce that $\textbf{Erman} \equiv \textbf{Andy}$. But this is not a problem if we add UNA to the OWA, like in the \textit{DL-Lite} family.
+Another point would be that if we perform RDF validation with no reasoning, we will get a further clash \textbf{Erman} is not defined to be a \textit{Person}, but if we do the validation after some reasoning, there will be no clash, because by definition the following definition will be inferred: $Person(\textbf{Erman})$. So in my understanding it would be more useful/reasonable to perform the validation task after reasoning.
 
 %\begin{itemize}
 	%\item explain why specific OWL 2 constructs could be used for RDF validation 
 	%\item explain why specific OWL 2 constructs should not be used for RDF validation
 %\end{itemize}
 
-
-
 Reasoning, which is the core service provided by OWL,
 and constraint validation are very closely related. 
 \an{maybe we can use also the term 'User-defined Consistency' described in 'see below' as a further 'hook' to establish our approach?}
 \url{http://www.aifb.kit.edu/images/d/d2/2005_925_Haase_Consistent_Evol_1.pdf}
-\tb{I'm not aware of this, but if you think it is worth - go ahead!}
-
+\tb{Andy, can you describe thin in the paper?}
 \an{a more formal example would be nice! ;)}
 Reasoning is the process of determining what follows from what has been
 stated.  Reasoning ranges from simple (students are people, John is a
 student, therefore John is a person) to the very complex. Reasoning can
 also recognize impossibilities (students are people, John is a student, John
 is not a person, therefore there is a contradiction). 
+It both should be possible: (1) constraint validation with reasoning and (2) constraint validation without reasoning. 
+Reasoning may be a pre validation step, in order to infer triples resolving constraint violations.
 
-\begin{itemize}
-	\item inferencing as a pre validation step
-	\item both should be possible: (1) constraint validation with reasoning and (2) constraint validation without reasoning \an{we should mention a reason why we need this...}
-\end{itemize}
+\tb{ToDO Thomas: example}
 
 %With regard to typing, W3C is assuming (AFAIK) that all types will be
 %explicit in the instance data - for the purposes of validation. There is
@@ -355,15 +347,7 @@ The three \textbf{main contributions} of this paper are:
 
 \tb{ToDO Thomas: RDF Validation Requirements and Inferencing}
 
-I would explain the addressed problem by an example, like the following:\\
-consider the KB $\mathcal{K} = \{Person \sqsubseteq \exists hasAncestor.Person, Person(\textbf{Thomas})\}$, using the OWA we know that \textbf{Thomas} has some Ancestor, but we do not know them, so $\mathcal{K}$ is consistent. In CWA the constraint needs to be satisfied only by named individuals, so there are some validation errors.\\
-A more complex example could be: \\
-Assume $\mathcal{K} = \{Person \sqsubseteq \exists hasAncestor.Person, (\textsf{funct } hasAncestor), Person(\textbf{Thomas}), hasAncestor(\textbf{Thomas}, \textbf{Erman}), hasAncestor(\textbf{Thomas}, \textbf{Andy})\}$, in CWA there is a clash because of the functional role \textit{hasAncestor} and the UNA, but in OWA there is no UNA by default so the reasoner will produce that $\textbf{Erman} \equiv \textbf{Andy}$. But this is not a problem if we add UNA to the OWA, like in the \textit{DL-Lite} family.
-Another point would be that if we perform RDF validation with no reasoning, we will get a further clash \textbf{Erman} is not defined to be a \textit{Person}, but if we do the validation after some reasoning, there will be no clash, because by definition the following definition will be inferred: $Person(\textbf{Erman})$. So in my understanding it would be more useful/reasonable to perform the validation task after reasoning.
-
 \subsection{OWL 2 QL Reasoning}
-
-\tb{ToDo for Andy and Erman: may you shorten the next 3 paragraphs? What is needed for the paper?}
 
 OWL 2 profiles (or fragments in logic literature) are restricted (sublanguage) versions of OWL 2 that offers different trade-offs regarding expressivity  vs. efficiency in reasoning. There are three main  profiles of OWL 2, which are OWL 2 QL, OWL 2 RL and OWL 2 EL namely, each designed to  be useful for different purposes and application scenarios. The choice of which profile to use is purpose-specific on what to express and to perform the reasoning about. We refer reader to \cite{owl2profiles2008} for a comprehensive treatment of those profiles. 
 
