incorporate Kai's ideas

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -174,6 +174,9 @@ XXXXX \\
 \end{abstract}
 %
 
+\tb{only star wars examples / best: 1 running example}
+\tb{how to bring expressivity into play? Erman writes something about expressivity}
+
 \section{Introduction}
 
 For many RDF applications, the formulation of constraints and the automatic validation of data according to these constraints is a much sought-after feature. 
@@ -211,6 +214,8 @@ The implementation can be tested at \url{http://purl.org/net/rdfval-demo} and
 the OWL 2 SPIN mapping is maintained at \url{https://github.com/boschthomas/OWL2-SPIN-Mapping}.
 
 \section{Motivation}
+
+\tb{1 simple example in motivation section}
 
 Constraint validation does not appear to be part of the services provided by OWL.  
 This has lead to claims that OWL cannot be used for constraint validation. 
@@ -318,7 +323,7 @@ The three \textbf{main contributions} of this paper are:
 	\item We evaluated to which extend the five possible standard DSCLs fulfill each requirement.
 \end{enumerate}
 
-\tb{ToDo Thomas: paper organization}
+\tb{ToDo Thomas: paper organization?}
 
 %\textbf{Ideas}
 %
@@ -334,6 +339,8 @@ The three \textbf{main contributions} of this paper are:
 	%\item complete without reasoning | CW
 	%\item there is no query rewriting mechanism for OWL 2, just for OWL 2 QL
 %\end{itemize}
+
+
 
 \section{RDF Validation Requirements and Reasoning}
 
